Add First Attempt at Audio Support

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -26,4 +26,19 @@ video-processing-context {
 
 tika.url="http://localhost:9998"
 
-http.port=9001
+http.port=9003
+
+play {
+  filters {
+    hosts.allowed = ["."]
+    csrf {
+      header {
+        bypassHeaders {
+          X-Requested-With = "*"
+          Csrf-Token = "nocheck"
+        }
+      }
+      bypassCorsTrustedOrigins = true
+    }
+  }
+}
