--- a/DockerFile
+++ b/DockerFile
@@ -1,8 +1,37 @@
-docker build \
---build-arg BASE_IMAGE_TAG="8u212-b04-jdk-stretch" \
---build-arg SBT_VERSION="1.3.5" \
---build-arg SCALA_VERSION="2.13.1" \
---build-arg USER_ID=1001 \
---build-arg GROUP_ID=1001 \
--t hseeberger/scala-sbt \
-github.com/hseeberger/scala-sbt.git#:debian
+# This Dockerfile has two required ARGs to determine which base image
+# to use for the JDK and which sbt version to install.
+
+ARG OPENJDK_TAG=8
+FROM openjdk:${OPENJDK_TAG}
+
+ARG SBT_VERSION=1.3.5
+
+# prevent this error: java.lang.IllegalStateException: cannot run sbt from root directory without -Dsbt.rootdir=true; see sbt/sbt#1458
+WORKDIR /app
+
+# Install sbt
+RUN \
+  mkdir /working/ && \
+  cd /working/ && \
+  curl -L -o sbt-$SBT_VERSION.deb https://repo.scala-sbt.org/scalasbt/debian/sbt-$SBT_VERSION.deb && \
+  dpkg -i sbt-$SBT_VERSION.deb && \
+  rm sbt-$SBT_VERSION.deb && \
+  apt-get update -y && \
+  apt-get install sbt -y && \
+  apt-get install openjdk-11-jre-headless -y && \
+  apt-get install imagemagick -y && \
+  apt-get install ffmpeg -y && \
+  apt-get install mediainfo -y && \
+  apt-get install libimage-exiftool-perl -y && \
+  cd && \
+  rm -r /working/ && \
+  sbt sbtVersion
+  
+  
+#   RUN apt-get update && apt-get install -y \
+#         openjdk-11-jre-headless \
+#         imagemagick            \
+#         ffmpeg            \
+#         mediainfo             \
+#         libimage-exiftool-perl           \
+#     && rm -rf /var/lib/apt/lists/*
