--- a/DockerFile
+++ b/DockerFile
@@ -1,28 +1,30 @@
-# This Dockerfile has two required ARGs to determine which base image
-# to use for the JDK and which sbt version to install.
+# Use the Debian Buster base image
+FROM debian:buster
 
-ARG OPENJDK_TAG=8
-FROM openjdk:${OPENJDK_TAG}
-
-ARG SBT_VERSION=1.3.5
-
-# prevent this error: java.lang.IllegalStateException: cannot run sbt from root directory without -Dsbt.rootdir=true; see sbt/sbt#1458
+# Set the working directory
 WORKDIR /app
 
+# Update and install required packages
+RUN apt-get update -y && \
+    apt-get install -y curl && \
+    apt-get install -y openjdk-11-jre-headless imagemagick ffmpeg mediainfo libimage-exiftool-perl webp && \
+    apt-get clean
+
 # Install sbt
-RUN \
-  mkdir /working/ && \
-  cd /working/ && \
-  curl -L -o sbt-$SBT_VERSION.deb https://repo.scala-sbt.org/scalasbt/debian/sbt-$SBT_VERSION.deb && \
-  dpkg -i sbt-$SBT_VERSION.deb && \
-  rm sbt-$SBT_VERSION.deb && \
-  apt-get update -y && \
-  apt-get install sbt -y && \
-  apt-get install openjdk-11-jre-headless -y && \
-  apt-get install imagemagick -y && \
-  apt-get install ffmpeg -y && \
-  apt-get install mediainfo -y && \
-  apt-get install libimage-exiftool-perl -y && \
-  cd && \
-  rm -r /working/ && \
-  sbt sbtVersion
+ARG SBT_VERSION=1.3.5
+RUN curl -L -o sbt-$SBT_VERSION.deb https://repo.scala-sbt.org/scalasbt/debian/sbt-$SBT_VERSION.deb && \
+    dpkg -i sbt-$SBT_VERSION.deb && \
+    rm sbt-$SBT_VERSION.deb
+
+# Prevent this error: java.lang.IllegalStateException: cannot run sbt from root directory without -Dsbt.rootdir=true
+ENV SBT_ROOTDIR=true
+
+# Copy the project files
+COPY . .
+
+# Build the project
+RUN sbt compile
+
+# Set the entry point (if needed, update this to your application's main class)
+# CMD ["sbt", "run"]
+
