--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@ steps:
       echo "SBT Version Installed:" && \
       sbt sbtVersion
 
-- name: 'gcr.io/cloud-builders/docker'
+- name: 'debian:buster'
   entrypoint: 'bash'
   args:
     - '-c'
@@ -17,12 +17,25 @@ steps:
       echo "Installed packages:" && \
       dpkg -l | grep -E 'openjdk|imagemagick|ffmpeg|mediainfo|libimage-exiftool-perl|webp'
 
-- name: 'gcr.io/scala-sbt'
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['images']  # Debug step to list Docker images
+
+- name: 'gcr.io/contribly-dev/scala-sbt'
   args: ['clean', 'docker:publishLocal']
 
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['tag', 'media-monkey:$COMMIT_SHA', 'eu.gcr.io/contribly-dev/media-monkey:$COMMIT_SHA']
+  args: ['images']  # Debug step to list Docker images
 
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'eu.gcr.io/contribly-dev/media-monkey:$COMMIT_SHA']
+  args:
+    - 'tag'
+    - 'eu.gcr.io/contribly-dev/media-monkey:$COMMIT_SHA'
+    - 'eu.gcr.io/contribly-dev/media-monkey:$COMMIT_SHA'
 
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['images']  # Debug step to list Docker images
+
+- name: 'gcr.io/cloud-builders/docker'
+  args:
+    - 'push'
+    - 'eu.gcr.io/contribly-dev/media-monkey:$COMMIT_SHA'
