Add default play secret

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -29,6 +29,8 @@ video-processing-context {
 http.port=9010
 metrics.port=3010
 
+play.http.secret.key="localdev"
+
 play {
   filters {
     hosts.allowed = ["."]
